// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`If given an appointment with a morning time slot, then match the snapshot 1`] = `
<div
  className="appointment"
>
  <strong>
    <span
      className="text-line"
    >
      Wednesday, May 5, 2021, between 8–10 a.m. Pacific time
    </span>
  </strong>
</div>
`;

exports[`If given an appointment with a morning time slot, then match the snapshot, in Spanish 1`] = `
<div
  className="appointment"
>
  <strong>
    <span
      className="text-line"
    >
      Miércoles, mayo 5, 2021, entre 8–10 a.m. hora del Pacífico
    </span>
  </strong>
</div>
`;

exports[`If given an appointment with a time slot that has a nonsense time range, then match the snapshot 1`] = `
<div
  className="appointment"
>
  <strong>
    <span
      className="text-line"
    >
      Wednesday, May 5, 2021, between 3 p.m. and 9 a.m. Pacific time
    </span>
  </strong>
</div>
`;

exports[`If given an appointment with a time slot that has a nonsense time range, then match the snapshot, in Spanish 1`] = `
<div
  className="appointment"
>
  <strong>
    <span
      className="text-line"
    >
      Miércoles, mayo 5, 2021, entre 3 p.m. y 9 a.m. hora del Pacífico
    </span>
  </strong>
</div>
`;

exports[`If given an appointment with a time slot that starts in the morning and ends in the afternoon, then match the snapshot 1`] = `
<div
  className="appointment"
>
  <strong>
    <span
      className="text-line"
    >
      Wednesday, May 5, 2021, between 8 a.m. and 3 p.m. Pacific time
    </span>
  </strong>
</div>
`;

exports[`If given an appointment with a time slot that starts in the morning and ends in the afternoon, then match the snapshot, in Spanish 1`] = `
<div
  className="appointment"
>
  <strong>
    <span
      className="text-line"
    >
      Miércoles, mayo 5, 2021, entre 8 a.m. y 3 p.m. hora del Pacífico
    </span>
  </strong>
</div>
`;

exports[`If given an appointment with an afternoon time slot, then match the snapshot 1`] = `
<div
  className="appointment"
>
  <strong>
    <span
      className="text-line"
    >
      Wednesday, May 5, 2021, between 1–3 p.m. Pacific time
    </span>
  </strong>
</div>
`;

exports[`If given an appointment with an afternoon time slot, then match the snapshot, in Spanish 1`] = `
<div
  className="appointment"
>
  <strong>
    <span
      className="text-line"
    >
      Miércoles, mayo 5, 2021, entre 1–3 p.m. hora del Pacífico
    </span>
  </strong>
</div>
`;

exports[`If given an appointment with no time slot, then match the snapshot 1`] = `
<div
  className="appointment"
>
  <strong>
    <span
      className="text-line"
    >
      Wednesday, May 5, 2021
    </span>
  </strong>
</div>
`;

exports[`If given an appointment with no time slot, then match the snapshot, in Spanish 1`] = `
<div
  className="appointment"
>
  <strong>
    <span
      className="text-line"
    >
      Miércoles, mayo 5, 2021
    </span>
  </strong>
</div>
`;
